fix table align center

--- a/WebPages/static/dataPage.css
+++ b/WebPages/static/dataPage.css
@@ -95,7 +95,7 @@ table, th, td {
 }
 
 table{
-    align: center;
+  margin:auto;
 }
 
 th, td {
